@@ -2,6 +2,7 @@ Version 3.1.1 To be released
 ============================
 BUG: Ticket#656 - TDatePicker does not return correct value when in callback mode (Christophe)
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
+ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
 ENH: Added THead requirement check (Qiang)
 
 Version 3.1.0 July 2, 2007
